enhanced overview resources

--- a/site/documentation/overview.html
+++ b/site/documentation/overview.html
@@ -96,17 +96,25 @@
     <section id="recommended_styles">
       <h2>Recommended Styles</h2>
       <p>Uranium tries to be as unopinionated as possible when it comes to styling. Uraniun interactions typically perform their magic by adding, removing, or changing the values associated with data attributes on HTML elements. How you choose to style these different states is entirely up to you.</p>
-      <p>That said, there are some basic types of styles that will be needed to see how the Uranium interactions behave. Generally, you are going to want the toggler interaction to toggle whether or not that toggler's content can be seen. One way to do that&mdash;although by no means the only way&mdash;is to have the CSS apply a rule of <span class="inline_code">display:none</span> to toggler content when it is supposed to be seen, and a rule of <span class="inline_code">display:block</span> when it is not supposed to be seen.</p>
-      <p>For all of our interactions, we provide a set of recommended styles that will make the behavior visible, but those are for demonstration purposes only. Uranium can be used with any CSS you can dream up!</p>
+      <p>That said, there are some basic types of styles that will be needed to see how the Uranium interactions behave. Generally, you are going to want the toggler interaction to toggle whether or not that toggler's content can be seen. One way to do that&mdash;although by no means the only way&mdash;is to have the CSS apply a rule of <span class="inline_code">display:block</span> to toggler content when it is supposed to be seen, and a rule of <span class="inline_code">display:none</span> when it is not supposed to be seen.</p>
+      <p>On the pages describing each of the Uranium interactions, you can see some basic recommended styles that will make that interaction's behavior visible. But those are for demonstration purposes only. Uranium can be used with any CSS you can dream up!</p>
     </section>
 
     <section id="additional_resources">
       <h2>Additional Resources</h2>
+      <h3>Tutorials</h3>
+      <p>To familiarize yourself with how Uranium can be added to a page, we've written up some tutorials demonstrating how to work through a basic and an advanced Uranium project. As you'll see, even the advanced example follows the same basic philosophy, allowing you to integration useful Javascript interactions just by adding a few declarative elements to your HTML.</p>
       <ul>
-        <li><a href="philosophy.html">Philosophy</a> - The guiding philosophy behind Uranium and the interactions we support</li>
-        <li><a href="model.html">Model</a> - general information about the model on which all the interactions are based</li>
-        <li><a href="styling.html">Styling</a> - "lazy" and "proper" styling of interactions</li>
-        <li><a href="grouping.html">Grouping</a> - when to use sets and when to use ids</li>
+        <li><a href="/documentation/getting_started.html">Basic Use</a> &mdash; Creating a simple toggler</li>
+        <li><a href="/documentation/advanced.html">Advanced Use</a> &mdash; Building a custom carousel with optional features</li>
+      </ul>
+      <h3>Additional Documentation</h3>
+      <p>We've written up some more detailed notes on some of the ways in which Uranium is unique. Uranium is not trying to be all things to all people, but for those who need something lightweight, unopinionated, and focused on injecting simple interactions in a declarative manner, Uranium just may be the answer.</p>
+      <ul>
+        <li><a href="philosophy.html">Philosophy</a> &mdash; The guiding philosophy behind Uranium and the interactions we support</li>
+        <li><a href="model.html">Model</a> &mdash; general information about the model on which all the interactions are based</li>
+        <li><a href="styling.html">Styling</a> &mdash; "lazy" and "explicit" styling of interactions</li>
+        <li><a href="grouping.html">Grouping</a> &mdash; when to use sets and when to use ids</li>
       </ul>
     </section>
 
