--- a/site/documentation/advanced.html
+++ b/site/documentation/advanced.html
@@ -199,7 +199,7 @@
 <span class="nt">&lt;div</span> <span class="na">data-ur-carousel-component=</span><span class="s">&quot;button&quot;</span> <span class="na">data-ur-carousel-button-type=</span><span class="s">&quot;next&quot;</span> <span class="na">data-ur-id=</span><span class="s">&quot;first_carousel&quot;</span><span class="nt">&gt;</span> Next » <span class="nt">&lt;/div&gt;</span>
 </code></pre></div>
           <p>Uranium ids can also be used for both tabs and togglers. If the button and the content cannot be placed in the same HTML element set, they can be separated physically and joined via the same Uranium id. We have a page about <a href="./grouping.html">grouping Uranium enabled HTML elements</a> that goes into more detail about this, if your're curious.</p>
-          <p>Now that you have gone through the advanced Uranium tutorial, you should feel confident playing around with all the interactions and using their optional and advanced features. For example, with the carousel you can add a counter as a numerical indicator of the index of the item you are on. You can also disable the infinite scrolling-style we have on our current carousel. These options and more are available on the <a href="../interactions/carousel.html">carousel interaction page</a>.</p>
+          <p>Now that you have gone through the advanced Uranium tutorial, you should feel confident playing around with all the interactions and using their optional and advanced features. For example, with the carousel you can add a counter as a numerical indicator of the index of the item you are on. These options and more are available on the <a href="../interactions/carousel.html">carousel interaction page</a>.</p>
         </div>
       </div>
     </div>  <!-- closing tutorial --> 
