--- a/site/interactions/carousel.html
+++ b/site/interactions/carousel.html
@@ -290,7 +290,7 @@
 
         <div id="carousel_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
 
-          <div data-ur-set="carousel"  data-ur-infinite="disabled" data-ur-id="MyFirstCarousel">
+          <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
             <span data-ur-carousel-component="count"> -- count -- </span>
             <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
               Prev
@@ -365,7 +365,7 @@
       <ul>
         <li><span class="inline_code">data-ur-vertical-scroll="disabled"</span> - apply this to the set</li>
       </ul>
-      <div data-ur-set="carousel" data-ur-infinite="disabled" data-ur-vertical-scroll="disabled">
+      <div data-ur-set="carousel" data-ur-vertical-scroll="disabled">
         <span data-ur-carousel-component="count"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
