--- a/interactions/geocode.html
+++ b/interactions/geocode.html
@@ -391,9 +391,9 @@ advanced_tab:
 
   <!-- Style Requirements -->
   <div class='wrapper'>
-    <h2> Required Styles </h2>
+    <h2> Recommended Styles </h2>
     <p>
-      No styles are required.
+      Not dependent on styling.
     </p>
     <hr/>
   </div>
