--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -35,9 +35,9 @@ advanced_tab:
       - indicates when big image is loading
       - "multiple?: false"
       - "state: enabled / disabled"
-instance:
+<!--instance:
   zoom(): zooms in/out
-  reset(): resets the zoom interaction
+  reset(): resets the zoom interaction -->
 ---
 <!-- Zoom Demonstration -->
 <h2>Demonstration</h2>
