--- a/site/interactions/geocode.html
+++ b/site/interactions/geocode.html
@@ -60,10 +60,10 @@
           </div>
         </div>
         <div class="wrapper">
+          <h2 class="attr_title">Attributes</h2>
           <div class="attributes" data-ur-set="tabs">
             <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
             <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
-            <h2 class="attr_title">Attributes</h2>
             <div class="basic_tab" data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
               <dl>
                 
@@ -562,9 +562,9 @@
 
   <!-- Style Requirements -->
   <div class='wrapper'>
-    <h2> Required Styles </h2>
+    <h2> Recommended Styles </h2>
     <p>
-      No styles are required.
+      Not dependent on styling.
     </p>
     <hr/>
   </div>
