--- a/site/interactions/input_clear.html
+++ b/site/interactions/input_clear.html
@@ -41,14 +41,14 @@
         <div class="description_wrapper">
           <h2> Description </h2>
           <div class="description">
-            <p>When a user focuses and begins typing on a text input field, a small x appears along the right side of the field that can be clicked to clear it. If there is already text in the input field, the x will appear without any typing.</p>
+            <p>When a user focuses and begins typing on a text input field, a small x appears along the right side of the field that can be clicked to clear it. If there is already text in the input field, the x will appear without any typing when the field receives focus.</p>
           </div>
         </div>
         <div class="wrapper">
+          <h2 class="attr_title">Attributes</h2>
           <div class="attributes" data-ur-set="tabs">
             <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
             <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
-            <h2 class="attr_title">Attributes</h2>
             <div class="basic_tab" data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
               <dl>
                 
@@ -100,12 +100,9 @@
     </div>
 
     <div data-ur-set='input-clear'>
-      <input data-ur-input-clear-component='input' type='text'/>
+      <input data-ur-input-clear-component='input' type='text' value="inital value" />
     </div>
 
-    <div data-ur-set='input-clear'>
-      <input data-ur-input-clear-component='input' type='text'/>
-    </div>
   </div>
 
   <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html">
@@ -114,11 +111,7 @@
 <span class="nt">&lt;/div&gt;</span>
 
 <span class="nt">&lt;div</span> <span class="na">data-ur-set=</span><span class="s">&#39;input-clear&#39;</span><span class="nt">&gt;</span>
-  <span class="nt">&lt;input</span> <span class="na">data-ur-input-clear-component=</span><span class="s">&#39;input&#39;</span> <span class="na">type=</span><span class="s">&#39;text&#39;</span><span class="nt">/&gt;</span>
-<span class="nt">&lt;/div&gt;</span>
-
-<span class="nt">&lt;div</span> <span class="na">data-ur-set=</span><span class="s">&#39;input-clear&#39;</span><span class="nt">&gt;</span>
-  <span class="nt">&lt;input</span> <span class="na">data-ur-input-clear-component=</span><span class="s">&#39;input&#39;</span> <span class="na">type=</span><span class="s">&#39;text&#39;</span><span class="nt">/&gt;</span>
+  <span class="nt">&lt;input</span> <span class="na">data-ur-input-clear-component=</span><span class="s">&#39;input&#39;</span> <span class="na">type=</span><span class="s">&#39;text&#39;</span> <span class="na">value=</span><span class="s">&quot;inital value&quot;</span> <span class="nt">/&gt;</span>
 <span class="nt">&lt;/div&gt;</span>
 </code></pre></div>
   </div>
