--- a/site/documentation/getting_started.html
+++ b/site/documentation/getting_started.html
@@ -7,8 +7,7 @@
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
 <script src="/src/jquery-1.9.1.min.js"></script>
-<!-- <script src="/src/jquery.uranium.js"></script> -->
-<script src="/src/jqur135.js"></script>
+<script src="/src/jquery.uranium.js"></script>
 
 <script type="text/javascript">
 
@@ -42,6 +41,7 @@
         <p>We've worked hard to make Uranium as streamlined as possible, requiring the least possible effort from the user.</p>
         <p>Part of this is ensuring that the widgets are easy to use and once you've learnt how to implement one, the same methods are easily applied to other widgets.</p>
         <p>As such, here we're going to go over an example of how to use widgets. We'll use the <a href="interactions/toggler.html">toggler</a> as a model.</p>
+        <p><em>Prerequisities:</em> make sure you have a simple HTML page set up with a script tag for <a href="https://developers.google.com/speed/libraries/devguide#jquery">jQuery v1.9.1</a> and <a href="/download.html">Uranium</a>.</p>
       </div>
     </div>
   </div> <!-- wrapper -->
