--- a/site/index.html
+++ b/site/index.html
@@ -7,8 +7,7 @@
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
 <script src="/src/jquery-1.9.1.min.js"></script>
-<!-- <script src="/src/jquery.uranium.js"></script> -->
-<script src="/src/jqur135.js"></script>
+<script src="/src/jquery.uranium.js"></script>
 
 <script type="text/javascript">
 
@@ -45,7 +44,7 @@
     <div id="how_to_use">
       <h4>How to Use:</h4>
       <ol>
-        <li>Include the Uranium library</li>
+        <li>Include jQuery and Uranium</li>
         <li>Give HTML pre-defined attributes</li>
         <li>&hellip; that's it!</li>
       </ol>
