--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ home_selected: selected
     <div id="how_to_use">
       <h4>How to Use:</h4>
       <ol>
-        <li>Include the Uranium library</li>
+        <li>Include jQuery and Uranium</li>
         <li>Give HTML pre-defined attributes</li>
         <li>&hellip; that's it!</li>
       </ol>
